Add target attribute to all links

--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
               My works in the social networks
             </h2>
             <div class="social-network-nav">
-              <a href="https://github.com/JelilFaisalAbudu" class="social-network-nav-link">
+              <a href="https://github.com/JelilFaisalAbudu" class="social-network-nav-link" target="_blank">
                 <i class="icon fab fa-github fa-2x"></i>
               </a>
-              <a href="https://twitter.com/jelilabudu" class="social-network-nav-link">
+              <a href="https://twitter.com/jelilabudu" class="social-network-nav-link" target="_blank">
                 <i class="icon fab fa-twitter fa-2x"></i>
               </a>
-              <a href="www.linkedin.com/in/jelilfaisalabudu" class="social-network-nav-link">
+              <a href="www.linkedin.com/in/jelilfaisalabudu" class="social-network-nav-link" target="_blank">
                 <i class="icon fab fa-linkedin-in fa-2x"></i>
               </a>
-              <a href="https://medium.com/@abudujelilfaisal" class="social-network-nav-link">
+              <a href="https://medium.com/@abudujelilfaisal" class="social-network-nav-link" target="_blank">
                 <i class="icon fab fa-medium fa-2x"></i>
               </a>
-              <a href="https://stackoverflow.com/users/13828331/jelilabudufaisal" class="social-network-nav-link">
+              <a href="https://stackoverflow.com/users/13828331/jelilabudufaisal" class="social-network-nav-link" target="_blank">
                 <i class="icon fab fa-stack-overflow fa-2x"></i>
               </a>
-              <a href="https://web.facebook.com/abudu.jelilfaisal/" class="social-network-nav-link">
+              <a href="https://web.facebook.com/abudu.jelilfaisal/" class="social-network-nav-link" target="_blank">
                 <i class="icon fab fa-facebook fa-2x"></i>
               </a>
             </div>
@@ -236,14 +236,14 @@
                 </div>
                 <div class="buttons-wrapper">
                   <a href="https://raw.githack.com/JelilFaisalAbudu/html-and-css-capstone-school-directory/development/pages/school-details.html"
-                    class="btn btn-block">
+                    class="btn btn-block" target="_blank">
                     <span class="text">see live</span>
                     <span class="icon">
                       <i class="fas fa-external-link-alt fa-2x"></i>
                     </span>
                   </a>
                   <a href="https://github.com/JelilFaisalAbudu/html-and-css-capstone-school-directory"
-                    class="btn btn-block">
+                    class="btn btn-block" target="_blank">
                     <span class="text">see source</span>
                     <span class="icon">
                       <i class="fab fa-github fa-2x"></i>
@@ -293,13 +293,13 @@
                     class="small-pic col-4">
                 </div>
                 <div class="buttons-wrapper">
-                  <a href="https://jelil-twitter-redesign.herokuapp.com/" class="btn btn-block">
+                  <a href="https://jelil-twitter-redesign.herokuapp.com/" class="btn btn-block" target="_blank">
                     <span class="text">see live</span>
                     <span class="icon">
                       <i class="fas fa-external-link-alt fa-2x"></i>
                     </span>
                   </a>
-                  <a href="https://github.com/JelilFaisalAbudu/twitter-redesign/" class="btn btn-block">
+                  <a href="https://github.com/JelilFaisalAbudu/twitter-redesign/" class="btn btn-block" target="_blank">
                     <span class="text">see source</span>
                     <span class="icon">
                       <i class="fab fa-github fa-2x"></i>
@@ -349,13 +349,13 @@
                 </div>
                 <div class="buttons-wrapper">
                   <a href="https://raw.githack.com/JelilFaisalAbudu/using-bootstrap/development/index.html"
-                    class="btn btn-block">
+                    class="btn btn-block" target="_blank">
                     <span class="text">see live</span>
                     <span class="icon">
                       <i class="fas fa-external-link-alt fa-2x"></i>
                     </span>
                   </a>
-                  <a href="https://github.com/JelilFaisalAbudu/using-bootstrap" class="btn btn-block">
+                  <a href="https://github.com/JelilFaisalAbudu/using-bootstrap" class="btn btn-block" target="_blank">
                     <span class="text">see source</span>
                     <span class="icon">
                       <i class="fab fa-github fa-2x"></i>
@@ -396,13 +396,13 @@
                   <img src="assets/images/soc_sca4.png" alt="Social Scaffold screenshot" class="small-pic col-4">
                 </div>
                 <div class="buttons-wrapper">
-                  <a href="https://jelil-ror-social-scaffold.herokuapp.com/" class="btn btn-block">
+                  <a href="https://jelil-ror-social-scaffold.herokuapp.com/" class="btn btn-block" target="_blank">
                     <span class="text">see live</span>
                     <span class="icon">
                       <i class="fas fa-external-link-alt fa-2x"></i>
                     </span>
                   </a>
-                  <a href="https://github.com/JelilFaisalAbudu/ror-social-scaffold" class="btn btn-block">
+                  <a href="https://github.com/JelilFaisalAbudu/ror-social-scaffold" class="btn btn-block" target="_blank">
                     <span class="text">see source</span>
                     <span class="icon">
                       <i class="fab fa-github fa-2x"></i>
@@ -446,7 +446,7 @@
                   <img src="assets/images/private_events2.png" alt="Private Events screenshot" class="small-pic col-4">
                 </div>
                 <div class="buttons-wrapper">
-                  <a href="https://github.com/JelilFaisalAbudu/using-bootstrap" class="btn btn-block">
+                  <a href="https://github.com/JelilFaisalAbudu/using-bootstrap" class="btn btn-block" target="_blank">
                     <span class="text">see source</span>
                     <span class="icon">
                       <i class="fab fa-github fa-2x"></i>
@@ -513,27 +513,27 @@
       </form>
       <div class="social-network">
         <address>
-          <a href="mailto:abudujelilfaisal@gmail.com" class="email-address">
+          <a href="mailto:abudujelilfaisal@gmail.com" class="email-address" target="_blank">
             abudujelilfaisal@gmail.com
           </a>
         </address>
         <div class="social-network-nav">
-          <a href="https://github.com/JelilFaisalAbudu" class="social-network-nav-link">
+          <a href="https://github.com/JelilFaisalAbudu" class="social-network-nav-link" target="_blank">
             <i class="fab fa-github fa-2x"></i>
           </a>
-          <a href="https://twitter.com/jelilabudu" class="social-network-nav-link">
+          <a href="https://twitter.com/jelilabudu" class="social-network-nav-link" target="_blank">
             <i class="fab fa-twitter fa-2x"></i>
           </a>
-          <a href="www.linkedin.com/in/jelilfaisalabudu" class="social-network-nav-link">
+          <a href="www.linkedin.com/in/jelilfaisalabudu" class="social-network-nav-link" target="_blank">
             <i class="fab fa-linkedin-in fa-2x"></i>
           </a>
-          <a href="https://medium.com/@abudujelilfaisal" class="social-network-nav-link">
+          <a href="https://medium.com/@abudujelilfaisal" class="social-network-nav-link" target="_blank">
             <i class="fab fa-medium fa-2x"></i>
           </a>
-          <a href="https://stackoverflow.com/users/13828331/jelilabudufaisal" class="social-network-nav-link">
+          <a href="https://stackoverflow.com/users/13828331/jelilabudufaisal" class="social-network-nav-link" target="_blank">
             <i class="fab fa-stack-overflow fa-2x"></i>
           </a>
-          <a href="https://web.facebook.com/abudu.jelilfaisal/" class="social-network-nav-link">
+          <a href="https://web.facebook.com/abudu.jelilfaisal/" class="social-network-nav-link" target="_blank">
             <i class="fab fa-facebook fa-2x"></i>
           </a>
         </div>
