--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
           <div class="social-network">
             <h2 class="heading social-network-heading">
-              My works in the social networks
+              My social networks
             </h2>
             <div class="social-network-nav">
               <a href="https://github.com/JelilFaisalAbudu" class="social-network-nav-link" target="_blank">
