Target the email service to open in a new tab

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
       </form>
       <div class="social-network">
         <address>
-          <a href="mailto:abudujelilfaisal@gmail.com" class="email-address" target="_blank">
+          <a onclick="javascript:window.open('mailto:abudujelilfaisal@gmail.com', 'mail');event.preventDefault()" href="mailto:abudujelilfaisal@gmail.com" class="email-address" target="_blank">
             abudujelilfaisal@gmail.com
           </a>
         </address>
