Fix grammatical errors in the 'About me'

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <section id="about" class="scroll-check about-me">
           <h2 class="section-heading">About me</h2>
           <p>
-           I'm a freelance software developer, with experience in remote team-work and collaboration. My area of specialization are building of mobile and web-applications, building of APIs services for e-commerce platforms. I'm always happy to be part of the team that would work their way through to achieve the desire goals of the larger group. Because I consider myself a 'forever student', I'm constantly building both on my technical skills and professional skills to stay a par with the ever-evolving technologies in my field and for work efficiency.
+            I'm a freelance software developer, with experience in remote team-work and collaboration. My areas of specialization are building of mobile and web applications, the building of APIs services for e-commerce platforms. I'm always happy to be part of the team that would work their way through to achieve the desire goals of the larger group. Because I consider myself a 'forever student', I'm always building both on my technical skills and professional skills to stay par with the ever-evolving technologies in my field and for work efficiency.
           </p>
           <a href="https://docs.google.com/document/d/18WEZF7YMTSWUjZGYY68tIU8ramQy1KiuyNEat4vBHsA/edit?usp=sharing" class="resume-link" target="_blank">Get resume</a>
         </section>
