Rename ids and make part some contnets bold

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   <span class="tool">Redux</span>
                 </div>
                 <button type="button" class="see-project-button" data-toggle="modal"
-                  data-target="#findYourHomeModal">
+                  data-target="#findYourHome">
                   See project
                 </button>
               </div>
@@ -121,7 +121,7 @@
                 <div class="built-tools">
                   <span class="tool">HTML/CSS</span>
                 </div>
-                <button class="see-project-button" data-toggle="modal" data-target="#schoolHubModal">
+                <button class="see-project-button" data-toggle="modal" data-target="#schoolHub">
                   See project
                 </button>
               </div>
@@ -135,7 +135,7 @@
                   <span class="tool">HTML/CSS</span>
                   <span class="tool">Bootstrap</span>
                 </div>
-                <button class="see-project-button" data-toggle="modal" data-target="#newsweekModal">
+                <button class="see-project-button" data-toggle="modal" data-target="#newsweek">
                   See project
                 </button>
               </div>
@@ -150,7 +150,7 @@
                   <span class="tool">Ruby on Rails</span>
                 </div>
                 <button type="button" class="see-project-button" data-toggle="modal"
-                  data-target="#twitterRedesignModal">
+                  data-target="#twitterRedesign">
                   See project
                 </button>
               </div>
@@ -217,7 +217,7 @@
       </div>
     </div>
 
-    <div class="modal fade" id="schoolHubModal" tabindex="-1" role="dialog" aria-labelledby="SchoolHub"
+    <div class="modal fade" id="schoolHub" tabindex="-1" role="dialog" aria-labelledby="SchoolHub"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -257,7 +257,7 @@
                 <div class="built-tools">
                   <span class="tool">HTML/CSS</span>
                 </div>
-                <p class="pt-0">SchoolHub is a static web app that I've built using only HTML and CSS. It's both mobile
+                <p class="pt-0"><b>SchoolHub</b> is a static web app that I've built using only HTML and CSS. It's both mobile
                   and desktop responsive. I've built to present as my HTML/CSS assessment(capstone) project. I followed
                   the requirements and the design specifications given by the assessment board of Microverse School.</p>
 
@@ -273,7 +273,7 @@
         </div>
       </div>
     </div>
-    <div class="modal fade" id="twitterRedesignModal" tabindex="-1" role="dialog" aria-labelledby="SchoolHub"
+    <div class="modal fade" id="twitterRedesign" tabindex="-1" role="dialog" aria-labelledby="SchoolHub"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -330,7 +330,7 @@
         </div>
       </div>
     </div>
-    <div class="modal fade" id="newsweekModal" tabindex="-1" role="dialog" aria-labelledby="Newsweek Clone"
+    <div class="modal fade" id="newsweek" tabindex="-1" role="dialog" aria-labelledby="Newsweek Clone"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -370,7 +370,7 @@
                   <span class="tool">HTML/CSS</span>
                   <span class="tool">Bootstrap</span>
                 </div>
-                <p class="pt-0">The Newsweek Clone is complex web app that I've built using the Bootstrap CSS framework.
+                <p class="pt-0"><b>The Newsweek Clone</b> is complex web app that I've built using the Bootstrap CSS framework.
                   I used the design from the original Newsweek website due to it complex layout. The web app is fully
                   responsive on both desktop and mobile.</p>
               </div>
@@ -380,7 +380,7 @@
         </div>
       </div>
     </div>
-    <div class="modal fade" id="findYourHomeModal" tabindex="-1" role="dialog" aria-labelledby="Find your home"
+    <div class="modal fade" id="findYourHome" tabindex="-1" role="dialog" aria-labelledby="Find your home"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -418,7 +418,7 @@
                   <span class="tool">Redux</span>
                 </div>
                 <p class="pt-0">
-                  Find Your Home is a real estate application built to list real estate properties of various categories. User can add properties to their favorite list. The application is highly responsive and can be used on devices of various screen.
+                  <b>Find Your Home</b> is a real estate application built to list real estate properties of various categories. User can add properties to their favorite list. The application is highly responsive and can be used on devices of various screen.
                 </p>
               </div>
             </div>
@@ -427,7 +427,7 @@
         </div>
       </div>
     </div>
-    <div class="modal fade" id="privateEventsModal" tabindex="-1" role="dialog" aria-labelledby="Private Events"
+    <div class="modal fade" id="privateEvents" tabindex="-1" role="dialog" aria-labelledby="Private Events"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -459,7 +459,7 @@
                   <span class="tool">Ruby on Rails</span>
                   <span class="tool">Bootstrap</span>
                 </div>
-                <p class="pt-0">Private Events is a responsive web app that people can look for their favorite events to
+                <p class="pt-0"><b>Private Events</b> is a responsive web app that people can look for their favorite events to
                   attend. Event organizers can also register their events for people to attend</p>
 
                 <p class="pt-0">The app has a simple registration process. All you have to provide is a username and a
