--- a/index.html
+++ b/index.html
@@ -95,20 +95,20 @@
         </section>
         <section id="portfolio" class="portfolio-section">
           <div class="portfolio">
-            <h2 class="heading section-heading">My best works</h2>
+            <h2 class="heading section-heading">Some Of My Recent Works</h2>
             <div class="row">
               <div class="portfolio-items-group col-12 col-md-6">
                 <figure>
                   <img class="project-screenshot img-fluid"
-                    src="assets/images/twitter_redesign_main-removebg-preview.png" />
-                  <figcaption class="caption">Twitter Redesign</figcaption>
+                    src="assets/images/find_your_home_preview_prev_ui.png" />
+                  <figcaption class="caption">Find Your Home</figcaption>
                 </figure>
                 <div class="built-tools">
-                  <span class="tool">HTML/CSS</span>
-                  <span class="tool">Ruby on Rails</span>
+                  <span class="tool">React</span>
+                  <span class="tool">Redux</span>
                 </div>
                 <button type="button" class="see-project-button" data-toggle="modal"
-                  data-target="#twitterRedesignModal">
+                  data-target="#findYourHome">
                   See project
                 </button>
               </div>
@@ -121,7 +121,7 @@
                 <div class="built-tools">
                   <span class="tool">HTML/CSS</span>
                 </div>
-                <button class="see-project-button" data-toggle="modal" data-target="#schoolHubModal">
+                <button class="see-project-button" data-toggle="modal" data-target="#schoolHub">
                   See project
                 </button>
               </div>
@@ -135,20 +135,22 @@
                   <span class="tool">HTML/CSS</span>
                   <span class="tool">Bootstrap</span>
                 </div>
-                <button class="see-project-button" data-toggle="modal" data-target="#newsweekModal">
+                <button class="see-project-button" data-toggle="modal" data-target="#newsweek">
                   See project
                 </button>
               </div>
               <div class="portfolio-items-group col-12 col-md-4">
                 <figure>
-                  <img class="project-screenshot img-fluid" src="assets/images/soc_sca1.png" alt="project_screenshot" />
-                  <figcaption class="caption">Social Scaffold</figcaption>
+                  <img class="project-screenshot img-fluid"
+                    src="assets/images/twitter_redesign_main-removebg-preview.png" />
+                  <figcaption class="caption">Twitter Redesign</figcaption>
                 </figure>
                 <div class="built-tools">
                   <span class="tool">HTML/CSS</span>
                   <span class="tool">Ruby on Rails</span>
                 </div>
-                <button class="see-project-button" data-toggle="modal" data-target="#socScafModal">
+                <button type="button" class="see-project-button" data-toggle="modal"
+                  data-target="#twitterRedesign">
                   See project
                 </button>
               </div>
@@ -215,7 +217,7 @@
       </div>
     </div>
 
-    <div class="modal fade" id="schoolHubModal" tabindex="-1" role="dialog" aria-labelledby="SchoolHub"
+    <div class="modal fade" id="schoolHub" tabindex="-1" role="dialog" aria-labelledby="SchoolHub"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -255,7 +257,7 @@
                 <div class="built-tools">
                   <span class="tool">HTML/CSS</span>
                 </div>
-                <p class="pt-0">SchoolHub is a static web app that I've built using only HTML and CSS. It's both mobile
+                <p class="pt-0"><b>SchoolHub</b> is a static web app that I've built using only HTML and CSS. It's both mobile
                   and desktop responsive. I've built to present as my HTML/CSS assessment(capstone) project. I followed
                   the requirements and the design specifications given by the assessment board of Microverse School.</p>
 
@@ -271,7 +273,7 @@
         </div>
       </div>
     </div>
-    <div class="modal fade" id="twitterRedesignModal" tabindex="-1" role="dialog" aria-labelledby="SchoolHub"
+    <div class="modal fade" id="twitterRedesign" tabindex="-1" role="dialog" aria-labelledby="SchoolHub"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -328,7 +330,7 @@
         </div>
       </div>
     </div>
-    <div class="modal fade" id="newsweekModal" tabindex="-1" role="dialog" aria-labelledby="Newsweek Clone"
+    <div class="modal fade" id="newsweek" tabindex="-1" role="dialog" aria-labelledby="Newsweek Clone"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -368,7 +370,7 @@
                   <span class="tool">HTML/CSS</span>
                   <span class="tool">Bootstrap</span>
                 </div>
-                <p class="pt-0">The Newsweek Clone is complex web app that I've built using the Bootstrap CSS framework.
+                <p class="pt-0"><b>The Newsweek Clone</b> is complex web app that I've built using the Bootstrap CSS framework.
                   I used the design from the original Newsweek website due to it complex layout. The web app is fully
                   responsive on both desktop and mobile.</p>
               </div>
@@ -378,7 +380,7 @@
         </div>
       </div>
     </div>
-    <div class="modal fade" id="socScafModal" tabindex="-1" role="dialog" aria-labelledby="Social Scaffold"
+    <div class="modal fade" id="findYourHome" tabindex="-1" role="dialog" aria-labelledby="Find your home"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -386,21 +388,21 @@
             <span aria-hidden="true">&times;</span>
           </button>
           <div class="modal-body row">
-            <img src="assets/images/soc_sca2.png" alt="Social Scaffold screenshot" class="main-modal-img col-12">
+            <img src="assets/images/find_your_home_details.png" alt="Find your home screenshot" class="main-modal-img col-12">
             <div class="content-wrapper col-12">
               <div class="small-pics-and-btn-wrapper">
                 <div class="small-pics-wrapper row">
-                  <img src="assets/images/soc_sca3.png" alt="Social Scaffold Screenshot" class="small-pic col-4">
-                  <img src="assets/images/soc_sca4.png" alt="Social Scaffold screenshot" class="small-pic col-4">
+                  <img src="assets/images/find_your_home_details.png" alt="Find your home screenshot" class="small-pic col-4">
+                  
                 </div>
                 <div class="buttons-wrapper">
-                  <a href="https://jelil-ror-social-scaffold.herokuapp.com/" class="btn btn-block" target="_blank">
+                  <a href="https://findyourdreamhouse.netlify.app/" class="btn btn-block" target="_blank">
                     <span class="text">see live</span>
                     <span class="icon">
                       <i class="fas fa-external-link-alt fa-2x"></i>
                     </span>
                   </a>
-                  <a href="https://github.com/JelilFaisalAbudu/ror-social-scaffold" class="btn btn-block" target="_blank">
+                  <a href="https://github.com/JelilFaisalAbudu/find-your-house-client" class="btn btn-block" target="_blank">
                     <span class="text">see source</span>
                     <span class="icon">
                       <i class="fab fa-github fa-2x"></i>
@@ -410,17 +412,14 @@
               </div>
 
               <div class="project-desc">
-                <h2 class="section-heading">Social Scaffold</h2>
+                <h2 class="section-heading">Find Your Home</h2>
                 <div class="built-tools">
-                  <span class="tool">Ruby on Rails</span>
-                  <span class="tool">HTML/CSS</span>
-                  <span class="tool">Bootstrap</span>
+                  <span class="tool">React</span>
+                  <span class="tool">Redux</span>
                 </div>
-                <p class="pt-0">Social Scaffold is a desktop web app to serve as a social friendship platform. Every
-                  registered user has the ability to send friend request to other users. After your friend request is
-                  accepted by the receiver, both of you automatically become active friends in a bidirectional
-                  arrangement. User can also decline a friend request, cancel a pending friend request or remove already
-                  existing friends from their friends' list. A user can also view other users' profile details.</p>
+                <p class="pt-0">
+                  <b>Find Your Home</b> is a real estate application built to list real estate properties of various categories. User can add properties to their favorite list. The application is highly responsive and can be used on devices of various screen.
+                </p>
               </div>
             </div>
           </div>
@@ -428,7 +427,7 @@
         </div>
       </div>
     </div>
-    <div class="modal fade" id="privateEventsModal" tabindex="-1" role="dialog" aria-labelledby="Private Events"
+    <div class="modal fade" id="privateEvents" tabindex="-1" role="dialog" aria-labelledby="Private Events"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -460,7 +459,7 @@
                   <span class="tool">Ruby on Rails</span>
                   <span class="tool">Bootstrap</span>
                 </div>
-                <p class="pt-0">Private Events is a responsive web app that people can look for their favorite events to
+                <p class="pt-0"><b>Private Events</b> is a responsive web app that people can look for their favorite events to
                   attend. Event organizers can also register their events for people to attend</p>
 
                 <p class="pt-0">The app has a simple registration process. All you have to provide is a username and a
