--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
           <a href="https://twitter.com/jelilabudu" class="social-network-nav-link" target="_blank">
             <i class="fab fa-twitter fa-2x"></i>
           </a>
-          <a href="www.linkedin.com/in/jelilfaisalabudu" class="social-network-nav-link" target="_blank">
+          <a href="https//www.linkedin.com/in/jelilfaisalabudu" class="social-network-nav-link" target="_blank">
             <i class="fab fa-linkedin-in fa-2x"></i>
           </a>
           <a href="https://medium.com/@abudujelilfaisal" class="social-network-nav-link" target="_blank">
