--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <a href="https://twitter.com/jelilabudu" class="social-network-nav-link" target="_blank">
                 <i class="icon fab fa-twitter fa-2x"></i>
               </a>
-              <a href="www.linkedin.com/in/jelilfaisalabudu" class="social-network-nav-link" target="_blank">
+              <a href="https://www.linkedin.com/in/jelilfaisalabudu" class="social-network-nav-link" target="_blank">
                 <i class="icon fab fa-linkedin-in fa-2x"></i>
               </a>
               <a href="https://medium.com/@abudujelilfaisal" class="social-network-nav-link" target="_blank">
