Update the contact form

--- a/index.html
+++ b/index.html
@@ -483,22 +483,22 @@
         that you need built or a project that need coding, I’d love to help
         you with it.
       </p>
-      <form action="get" class="contact-form">
+      <form action="https://formcarry.com/s/0HXXzJ2CJJB" method="POST" class="contact-form">
         <div class="form-group-flex">
           <div class="form-group">
-            <input type="text" name="" id="fullName" class="form-control full-name" required placeholder="Full Name*" />
+            <input type="text" name="name" id="fullName" class="form-control full-name" required placeholder="Your Name*" />
             <div class="invalid-feedback">Please provide your name.</div>
           </div>
           <div class="form-group">
-            <input type="email" name="" id="emailAddress" class="form-control email-address" required
-              placeholder="Email*" />
+            <input type="email" name="email" id="emailAddress" class="form-control email-address" required
+              placeholder=" your email address*" />
             <div class="invalid-feedback">
               Please provide your email address.
             </div>
           </div>
         </div>
         <div class="form-group">
-          <textarea name="" id="message" cols="30" rows="6" class="form-control" placeholder="message*"
+          <textarea name="message" id="message" cols="30" rows="6" class="form-control" placeholder="Type your message here*"
             required></textarea>
           <div class="invalid-feedback">Please provide your message..</div>
         </div>
